# pertrack

./: Makefile  pyproject.toml
backend/: main.py
frontend/: .eslintrc.cjs  bun.lockb  index.html  jsconfig.json  package.json  vite.config.js
frontend/src/: App.vue  helpers.js
frontend/src/assets/: element-plus.scss
frontend/src/components/: CircleChart.vue  ExpenseCard.vue
frontend/src/components/budget/: BudgetCard.vue  BudgetChart.vue  BudgetTable.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/services/: budget.js
frontend/src/stores/: budget.js
frontend/src/views/: HomeView.vue
