[tool.poetry]
name = "pertrack"
version = "0.1.0"
description = ""
authors = ["Egor Ershov <poleqqq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
